Fix aligned SelectFields

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,16 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 70px;
   background-color: #fff;
 }
 .Header-Dropdowns {
   width: 90%;
-  position: relative;
 }
 
 .Header-Dropdown {
-  position: absolute;
   width: 21%;
   margin: 0 1%;
+  vertical-align: bottom;
 }
